--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.0",
     "@hookform/resolvers": "^5.0.1",
     "lucide-react": "^0.553.0",
     "next": "15.4.5",
