--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -2,15 +2,18 @@
   "name": "payment-service",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx --env-file=.env --watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@hono/node-server": "^1.19.6",
-    "hono": "^4.10.5"
+    "@hono/clerk-auth": "^3.0.3",
+    "@hono/node-server": "^1.19.0",
+    "hono": "^4.9.6"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
