--- a/packages/product-db/package.json
+++ b/packages/product-db/package.json
@@ -8,14 +8,12 @@
     "db:deploy": "prisma migrate deploy"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^24.10.1",
-    "prisma": "^6.19.0",
-    "@repo/typescript-config": "workspace:*"
+    "dotenv-cli": "^11.0.0",
+    "prisma": "^6.16.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0"
-  },
-  "exports": {
-    ".": "./src/index.ts"
+    "@prisma/client": "^6.16.0"
   }
 }
