--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@clerk/fastify": "^2.4.30",
+    "@fastify/cors": "^11.1.0",
+    "@repo/order-db": "workspace:*",
     "date-fns": "^4.1.0",
     "fastify": "^5.5.0"
-  }
+  },
+  "exports": "./src/index.ts"
 }
