--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -18,6 +18,7 @@
     "@repo/product-db": "workspace:*"
   },
   "devDependencies": {
+    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3"
