--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@hono/clerk-auth": "^3.0.3",
     "@hono/node-server": "^1.19.0",
-    "hono": "^4.9.6"
+    "hono": "^4.9.6",
+    "stripe": "^19.3.1"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
