set up kafka success

--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -23,7 +23,8 @@
     "@fastify/cors": "^11.1.0",
     "@repo/order-db": "workspace:*",
     "date-fns": "^4.1.0",
-    "fastify": "^5.5.0"
+    "fastify": "^5.5.0",
+    "@repo/kafka": "workspace:*"
   },
   "exports": "./src/index.ts"
 }
