--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -11,7 +11,8 @@
     "@hono/clerk-auth": "^3.0.3",
     "@hono/node-server": "^1.19.0",
     "hono": "^4.9.6",
-    "stripe": "^19.3.1"
+    "stripe": "^19.3.1",
+    "@repo/kafka": "workspace:*"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
